feat: реализовано добавление и удаление рецептов